tests/ui-1.39_post/tuple_struct.stderr
error: structopt only supports non-tuple structs and enums
  --> $DIR/tuple_struct.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^

error: could not compile `structopt-tests`.
